# ScholarLens

./: .gitignore  LICENSE  README.md  pyproject.toml
airflow/: Airflow_Dag.py  Airflow_Dag_Combined.py  extraction_files_embedd.py  extraction_files_markdown.py
backend/: package-lock.json  pyproject.toml
backend/apis/: arxiv.py  main.py  rag.py  router.py  web.py
backend/tests/: test.py
diagram/: architecture_diagram.py
frontend/copilot/: package.json
frontend/copilot/ui/: next.config.ts  package-lock.json  package.json
frontend/copilot/ui/app/: CopilotChat.tsx  SearchContext.tsx  layout.tsx  page.tsx  styles.css
frontend/copilot/ui/app/api/copilotkit/: route.ts
