[tool.poetry]
name = "research-app"
version = "0.1.0"
description = ""
authors = ["Abhinav Gupta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.45"
copilotkit = "^0.1.27"
openai = "^1.54.3"
tavily-python = "^0.5.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
beautifulsoup4 = "^4.12.3"
logging = "^0.4.9.6"
transformers = "^4.46.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
